--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.6.2",
-    "rmmz": "github:niokasgami/rpg-maker-mz-typescript",
     "typescript": "^4.7.2"
   },
   "dependencies": {
     "@mzfm/common": "github:mzfm/common",
-    "@types/node": "^17.0.40"
+    "@types/node": "^17.0.40",
+    "rmmz": "npm:rmmz-types@^1.5.0-3"
   },
   "license": "MIT",
   "private": true
