--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,12 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm ci
       - run: npm run build
+      - run: npm run build -- --minify
       - uses: actions/upload-artifact@v3
         with:
           name: MZFM_I18n.js
           path: dist/MZFM_I18n.js
+      - uses: actions/upload-artifact@v3
+        with:
+          name: MZFM_I18n.min.js
+          path: dist/MZFM_I18n.min.js
